--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 body {
   margin: 0;
 }
+
+table,
+td {
+  border-collapse: collapse;
+  border: 1px solid black;
+}
+
+tr,
+td {
+  width: 20px;
+  height: 20px;
+}
