--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,21 @@ h2 {
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center;
 }
+
+.pop-up {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 배경색을 투명하게 설정하여 겹치는 영역을 알아볼 수 있게 합니다. */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.pop-up--hide {
+  /* display: none; */
+}
