feature / 격자 사이즈 조절

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 h2 {
   text-align: center;
 }
+.input-box {
+  margin: 0 auto; /* 수평 가운데 정렬 */
+  display: block; /* 블록 요소로 설정하여 가운데 정렬이 적용될 수 있도록 함 */
+}
 
-.board {
-  margin-top: 100px;
+.game-board {
+  margin: 30px auto 0 auto;
   display: flex;
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center;
@@ -24,5 +28,5 @@ h2 {
 }
 
 .pop-up--hide {
-  /* display: none; */
+  display: none;
 }
