--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+.App {
+  text-align: center;
+  padding: 20px;
+  height: 100vh;
+  transition: background-color 0.3s ease;
+}
+
+.dark {
+  background-color: darkgray;
+  color: #fff;
+}
+
+.darkmode-btn {
+  margin-bottom: 20px;
+}
 h2 {
   text-align: center;
 }
